--- a/react-app/src/components/Updates/UpdatesList/Updates.css
+++ b/react-app/src/components/Updates/UpdatesList/Updates.css
@@ -35,7 +35,7 @@
     min-height: 130px;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .update-details{
