--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -94,4 +94,6 @@ img{
 
 button{
     cursor: pointer;
+    font-family: 'Open_Sans';
+    /* font-size: larger; */
 }
